--- a/Pipfile
+++ b/Pipfile
@@ -24,7 +24,7 @@ django-widget-tweaks = "==1.4.1"
 django-widgets-improved = "==1.5.0"
 psycopg2 = "==2.7.5"
 python-decouple = "==3.1"
-gunicorn = "*"
+gunicorn = "==19.9.0"
 
 [requires]
 python_version = "3.6"
