--- a/Pipfile
+++ b/Pipfile
@@ -26,6 +26,7 @@ psycopg2 = "==2.7.5"
 python-decouple = "==3.1"
 gunicorn = "==19.9.0"
 xlwt = "*"
+tablib = "==0.14.0"
 
 [requires]
 python_version = "3.6"
